<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <com.zczczy.leo.fuwuwangapp.viewgroup.MyTitleView_
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.zczczy.leo.fuwuwangapp.viewgroup.MyTitleView_>
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <cn.lightsky.infiniteindicator.InfiniteIndicatorLayout
                android:id="@+id/indicator_default_circle"
                android:layout_width="match_parent"
                android:layout_height="135dp">
            </cn.lightsky.infiniteindicator.InfiniteIndicatorLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_notice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:background="@drawable/shape_activity_selector"
                    android:text="@string/txt_notice"
                    />
                <TextView
                    android:id="@+id/txt_topic"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:clickable="true"
                    android:textSize="16sp"
                    android:background="@drawable/shape_activity_selector"
                    android:text="@string/txt_topic"
                    />
                <TextView
                    android:id="@+id/txt_fund"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:background="@drawable/shape_activity_selector"
                    android:text="@string/txt_fund"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_cooperation_merchant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:drawableTop="@mipmap/cooperation_merchant"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:background="@drawable/shape_activity_selector"
                    android:text="@string/txt_cooperation_merchant" />

                <TextView
                    android:id="@+id/txt_experience_center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:drawableTop="@mipmap/experience_center"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:background="@drawable/shape_agent_selector"
                    android:text="@string/txt_experience_center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_agent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:drawableTop="@mipmap/agent"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:background="@drawable/shape_agent_selector"
                    android:text="@string/txt_agent" />

                <TextView
                    android:id="@+id/txt_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:drawableTop="@mipmap/activity"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:background="@drawable/shape_activity_selector"
                    android:text="@string/txt_activity" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_business_institute"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:drawableTop="@mipmap/school"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:background="@drawable/shape_activity_selector"
                    android:text="@string/txt_business_institute" />

                <TextView
                    android:id="@+id/txt_service"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:drawableTop="@mipmap/service"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:background="@drawable/shape_agent_selector"
                    android:text="@string/txt_service" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


