<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

    </FrameLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:background="@mipmap/bottom_bg"
        android:layout_height="50dp"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/bottom_home_selector"
                    android:contentDescription="@string/unuse"
                    />

                <TextView
                    android:id="@+id/txt_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_home"
                    android:textColor="@color/bottom_selector" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <LinearLayout
                android:id="@+id/ll_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_me"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/bottom_me_selector"
                    android:contentDescription="@string/unuse"
                    />

                <TextView
                    android:id="@+id/txt_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_me"
                    android:textColor="@color/bottom_selector" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>